--- a/mnist/mnist-2.ipynb
+++ b/mnist/mnist-2.ipynb
@@ -287,98 +287,210 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 数据预处理"
+    "# ⭐网络定义"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from torch import nn\n",
+    "import torch.nn.functional as F\n",
+    "\n",
+    "class Mnist_NN(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        # super()加括号\n",
+    "        super().__init__()\n",
+    "        self.hidden1=nn.Linear(784, 128)\n",
+    "        self.hidden2=nn.Linear(128, 256)\n",
+    "        self.out=nn.Linear(256, 10)\n",
+    "        self.dropout=nn.Dropout(0.5)\n",
+    "    \n",
+    "    def forward(self, x):\n",
+    "        x=F.relu(self.hidden1(x))\n",
+    "        x=self.dropout(x)\n",
+    "        x=F.relu(self.hidden2(x))\n",
+    "        x=self.dropout(x)\n",
+    "        x=self.out(x)\n",
+    "        return x\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\ZHANGH~1\\AppData\\Local\\Temp/ipykernel_22584/1256590853.py:2: UserWarning: The given NumPy array is not writable, and PyTorch does not support non-writable tensors. This means writing to this tensor will result in undefined behavior. You may want to copy the array to protect its data or make it writable before converting it to a tensor. This type of warning will be suppressed for the rest of this program. (Triggered internally at C:\\actions-runner\\_work\\pytorch\\pytorch\\builder\\windows\\pytorch\\torch\\csrc\\utils\\tensor_numpy.cpp:205.)\n",
-      "  x_train,y_train = map(torch.Tensor, (train_imgs, train_labels))\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch.Size([60000, 28, 28])\n",
-      "torch.Size([60000])\n",
-      "tensor([5., 0., 4., 1., 9., 2., 1., 3., 1., 4.])\n"
+      "Mnist_NN(\n",
+      "  (hidden1): Linear(in_features=784, out_features=128, bias=True)\n",
+      "  (hidden2): Linear(in_features=128, out_features=256, bias=True)\n",
+      "  (out): Linear(in_features=256, out_features=10, bias=True)\n",
+      "  (dropout): Dropout(p=0.5, inplace=False)\n",
+      ")\n"
      ]
     }
    ],
    "source": [
-    "import torch\n",
-    "x_train,y_train = map(torch.Tensor, (train_imgs, train_labels))\n",
-    "print(x_train.shape)\n",
-    "print(y_train.shape)\n",
-    "print(y_train[:10])"
+    "net = Mnist_NN()\n",
+    "print(net)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hidden1.weight Parameter containing:\n",
+      "tensor([[-0.0198, -0.0030,  0.0156,  ...,  0.0002,  0.0280, -0.0288],\n",
+      "        [-0.0278, -0.0279, -0.0231,  ..., -0.0197,  0.0142, -0.0141],\n",
+      "        [-0.0355,  0.0282,  0.0280,  ...,  0.0111,  0.0305, -0.0334],\n",
+      "        ...,\n",
+      "        [-0.0057, -0.0008,  0.0322,  ...,  0.0322,  0.0066,  0.0191],\n",
+      "        [ 0.0205,  0.0289,  0.0022,  ...,  0.0219,  0.0330,  0.0235],\n",
+      "        [ 0.0117, -0.0181,  0.0216,  ...,  0.0131, -0.0186,  0.0055]],\n",
+      "       requires_grad=True) torch.Size([128, 784])\n",
+      "hidden1.bias Parameter containing:\n",
+      "tensor([ 1.3103e-02,  2.8438e-02, -1.0083e-02,  6.3774e-03,  2.3302e-05,\n",
+      "        -3.1514e-02,  2.4512e-02,  2.0390e-02, -1.2503e-02,  3.4174e-03,\n",
+      "        -2.2131e-02, -5.7559e-03, -2.9135e-02,  1.1883e-02,  8.1765e-03,\n",
+      "         3.3970e-02,  1.1341e-02, -1.4695e-02, -1.5308e-02, -1.7665e-03,\n",
+      "        -1.1653e-03, -1.6147e-02, -3.3864e-02, -2.4299e-02, -3.2299e-02,\n",
+      "         2.5596e-02,  1.0792e-02, -2.9264e-02,  3.3947e-02,  1.1794e-02,\n",
+      "         7.1318e-03, -2.7505e-02, -9.7339e-03,  3.4844e-02, -2.2226e-02,\n",
+      "         2.5900e-03,  1.9257e-02,  1.4154e-02,  2.6341e-02, -1.4463e-02,\n",
+      "        -1.9253e-02, -2.5393e-02,  1.0383e-02, -2.0084e-02, -1.4687e-02,\n",
+      "         3.1503e-02, -1.7124e-02, -2.9489e-03,  3.2227e-02,  1.5565e-02,\n",
+      "        -2.6446e-02, -3.3013e-02, -3.0487e-02, -2.1259e-02, -3.1636e-02,\n",
+      "         1.5006e-02, -2.6996e-02,  1.6883e-02,  8.3227e-03,  2.4326e-02,\n",
+      "        -1.5962e-02,  1.4720e-02,  3.0439e-03,  3.4866e-02, -2.7862e-02,\n",
+      "        -8.6289e-05,  9.9142e-03,  2.3787e-02, -1.3951e-02,  2.3752e-02,\n",
+      "        -1.5776e-02,  3.3132e-02,  1.3246e-02, -1.5515e-02,  7.7631e-04,\n",
+      "         9.6252e-03, -2.4824e-02,  3.2638e-02,  4.9165e-03,  2.7397e-02,\n",
+      "         6.1196e-03, -1.4261e-02, -3.2496e-02, -1.2823e-02,  1.5204e-02,\n",
+      "        -3.5381e-03,  5.8431e-03, -3.4140e-02, -1.3552e-02,  2.5449e-02,\n",
+      "        -2.3724e-02, -2.5494e-02,  3.4575e-02, -2.4047e-02,  2.7179e-02,\n",
+      "        -3.3022e-02, -2.7867e-02, -2.7831e-02, -2.9488e-02,  4.4058e-03,\n",
+      "        -5.4512e-03,  2.6714e-02, -3.2020e-02, -1.6562e-02, -2.8621e-02,\n",
+      "         1.5836e-02, -4.5062e-03,  1.2466e-02, -2.1969e-02,  4.1597e-03,\n",
+      "        -3.9454e-03,  1.5133e-02,  2.8129e-02,  1.7990e-02, -8.7556e-03,\n",
+      "         3.3597e-02,  2.4590e-02, -8.1170e-03,  2.0970e-02,  3.4362e-02,\n",
+      "         2.6066e-02, -1.2332e-02,  1.9505e-02, -1.8049e-02,  3.0594e-02,\n",
+      "        -2.0620e-03, -1.1183e-02,  3.2114e-02], requires_grad=True) torch.Size([128])\n",
+      "hidden2.weight Parameter containing:\n",
+      "tensor([[-0.0059,  0.0344, -0.0044,  ..., -0.0084,  0.0607, -0.0370],\n",
+      "        [-0.0304,  0.0432, -0.0160,  ...,  0.0623, -0.0387,  0.0455],\n",
+      "        [ 0.0069,  0.0550, -0.0731,  ...,  0.0418,  0.0800, -0.0564],\n",
+      "        ...,\n",
+      "        [ 0.0064,  0.0395, -0.0865,  ...,  0.0830, -0.0128, -0.0755],\n",
+      "        [ 0.0824, -0.0880,  0.0135,  ...,  0.0812, -0.0185,  0.0790],\n",
+      "        [-0.0864,  0.0034, -0.0809,  ..., -0.0689,  0.0056, -0.0293]],\n",
+      "       requires_grad=True) torch.Size([256, 128])\n",
+      "hidden2.bias Parameter containing:\n",
+      "tensor([ 0.0155, -0.0685,  0.0380, -0.0529,  0.0802, -0.0624, -0.0181,  0.0053,\n",
+      "         0.0702,  0.0699,  0.0284, -0.0640,  0.0322, -0.0463, -0.0825, -0.0322,\n",
+      "        -0.0430,  0.0150,  0.0346, -0.0828,  0.0878,  0.0023,  0.0471, -0.0288,\n",
+      "        -0.0650, -0.0818,  0.0755, -0.0649,  0.0344,  0.0209,  0.0425,  0.0408,\n",
+      "         0.0547, -0.0137,  0.0812,  0.0049,  0.0600,  0.0843, -0.0454, -0.0649,\n",
+      "         0.0500, -0.0432, -0.0022, -0.0257,  0.0462, -0.0244,  0.0527,  0.0238,\n",
+      "         0.0813, -0.0554,  0.0620,  0.0644, -0.0520,  0.0387, -0.0449, -0.0561,\n",
+      "         0.0779,  0.0161, -0.0147, -0.0173, -0.0162, -0.0174,  0.0654, -0.0414,\n",
+      "         0.0535, -0.0550, -0.0644, -0.0457,  0.0507, -0.0835,  0.0369,  0.0579,\n",
+      "        -0.0577, -0.0861, -0.0041,  0.0185,  0.0743,  0.0450,  0.0444,  0.0115,\n",
+      "         0.0680,  0.0317,  0.0659, -0.0511,  0.0716,  0.0459, -0.0663, -0.0653,\n",
+      "        -0.0800,  0.0077,  0.0754, -0.0645,  0.0602, -0.0088, -0.0394, -0.0546,\n",
+      "        -0.0437,  0.0014, -0.0167,  0.0213, -0.0137,  0.0296, -0.0320,  0.0017,\n",
+      "         0.0645,  0.0301,  0.0303,  0.0671,  0.0562, -0.0458,  0.0490, -0.0134,\n",
+      "        -0.0612, -0.0096,  0.0673,  0.0192, -0.0840,  0.0705,  0.0040, -0.0840,\n",
+      "         0.0160,  0.0118,  0.0881,  0.0003, -0.0540, -0.0449,  0.0336, -0.0146,\n",
+      "         0.0456, -0.0366,  0.0124,  0.0487,  0.0673,  0.0066,  0.0258, -0.0604,\n",
+      "        -0.0008, -0.0521,  0.0094,  0.0827, -0.0433,  0.0406,  0.0840,  0.0768,\n",
+      "        -0.0448,  0.0357, -0.0816,  0.0686,  0.0395,  0.0749,  0.0868, -0.0834,\n",
+      "         0.0802,  0.0466, -0.0405, -0.0634,  0.0072, -0.0016, -0.0048, -0.0353,\n",
+      "         0.0252,  0.0243, -0.0316,  0.0021,  0.0594,  0.0316,  0.0838, -0.0475,\n",
+      "        -0.0373, -0.0141, -0.0032, -0.0376,  0.0446,  0.0402, -0.0818, -0.0674,\n",
+      "         0.0850, -0.0355,  0.0471,  0.0638,  0.0433,  0.0220, -0.0807, -0.0492,\n",
+      "         0.0308, -0.0580, -0.0676, -0.0337,  0.0241,  0.0393,  0.0629,  0.0610,\n",
+      "         0.0767, -0.0465, -0.0172,  0.0085,  0.0459, -0.0559, -0.0524, -0.0496,\n",
+      "        -0.0393, -0.0336, -0.0174, -0.0517,  0.0723, -0.0008, -0.0106, -0.0386,\n",
+      "         0.0639, -0.0735,  0.0238,  0.0820, -0.0842, -0.0859,  0.0607, -0.0045,\n",
+      "        -0.0180,  0.0133, -0.0483,  0.0119, -0.0577,  0.0882,  0.0631, -0.0821,\n",
+      "         0.0592,  0.0653,  0.0787, -0.0238, -0.0738, -0.0346, -0.0194, -0.0291,\n",
+      "        -0.0613,  0.0064,  0.0662, -0.0304, -0.0338, -0.0492, -0.0042, -0.0446,\n",
+      "        -0.0568,  0.0351,  0.0088,  0.0426, -0.0502, -0.0705,  0.0057, -0.0621,\n",
+      "        -0.0376, -0.0417, -0.0264, -0.0352,  0.0091, -0.0022, -0.0774,  0.0790],\n",
+      "       requires_grad=True) torch.Size([256])\n",
+      "out.weight Parameter containing:\n",
+      "tensor([[-0.0152, -0.0260,  0.0488,  ...,  0.0328, -0.0334, -0.0443],\n",
+      "        [ 0.0157, -0.0577,  0.0117,  ..., -0.0438, -0.0032, -0.0005],\n",
+      "        [ 0.0444, -0.0533,  0.0584,  ...,  0.0385,  0.0314,  0.0019],\n",
+      "        ...,\n",
+      "        [ 0.0278, -0.0232, -0.0512,  ...,  0.0229,  0.0054,  0.0073],\n",
+      "        [ 0.0373, -0.0242, -0.0011,  ..., -0.0283,  0.0168, -0.0038],\n",
+      "        [ 0.0445,  0.0323,  0.0114,  ...,  0.0621, -0.0458,  0.0551]],\n",
+      "       requires_grad=True) torch.Size([10, 256])\n",
+      "out.bias Parameter containing:\n",
+      "tensor([ 0.0223, -0.0455,  0.0057,  0.0294, -0.0428,  0.0529, -0.0490,  0.0619,\n",
+      "         0.0083, -0.0472], requires_grad=True) torch.Size([10])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 打印网络中的权重和偏置项\n",
+    "\n",
+    "for name, params in net.named_parameters():\n",
+    "    print(name, params, params.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 准备数据集\n",
+    "from torch.utils.data import TensorDataset\n",
+    "from torch.utils.data import DataLoader\n",
+    "\n",
+    "train_ds = TensorDataset(x_train, y_train)\n",
+    "train_dl = DataLoader(train_ds, batch_size=bs, shuffle=True)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 模型"
+    "# 训练"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "torch.Size([64, 10])\n",
-      "torch.float32\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "tensor(2981.0134, grad_fn=<NllLossBackward0>)"
-      ]
-     },
-     "execution_count": 63,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# 测试\n",
-    "import torch.nn.functional as F\n",
+    "import numpy as np\n",
     "\n",
-    "# 超参数\n",
-    "bs=64\n",
-    "input_size=28*28\n",
-    "\n",
-    "# mini batch\n",
-    "xb=x_train[0:bs]\n",
-    "yb=y_train[0:bs]\n",
-    "\n",
-    "# 参数\n",
-    "weight=torch.randn([input_size, 10], dtype=torch.float, requires_grad=True)\n",
-    "bias=torch.randn(10, requires_grad=True)\n",
-    "\n",
-    "# 模型\n",
-    "def model(xb):\n",
-    "    xb=xb.reshape(bs, input_size)\n",
-    "    return torch.matmul(xb, weight) + bias\n",
-    "\n",
-    "\n",
-    "\n",
-    "y_predict=model(xb)\n",
-    "print(y_predict.shape)\n",
-    "print(y_predict.dtype)\n",
-    "F.cross_entropy(y_predict, yb.long())"
+    "def train(steps, model, loss_func, opt, train_dl, valid_dl):\n",
+    "    for step in range(steps):\n",
+    "        # 指定model的模式\n",
+    "        model.train()\n",
+    "        for xb, yb in train_dl:\n",
+    "            loss_batch(model, )\n",
+    "        # 指定验证模式\n",
+    "        model.eval()\n",
+    "        # 不更新权重\n",
+    "        with torch.no_grad():"
    ]
   }
  ],
